mise à jour Mel

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 			</div>
 			<div class="card">
 				<div class="profil">
-					<img src="/photos/blank-profile-picture.png" alt="" />
+					<img src="/photos/mel.jpg" alt="photo de Mel" />
 					<div class="description">
 						<div class="para">
 							<p>Ceci est un paragraphe de description</p>
 						</div>
 						<ul>
 							<li>
-								<span>Linkedin</span><button class="btn-link"><a href="">Consulter mon Linkedin</a></button>
+								<span>Linkedin</span><button class="btn-link"><a href="https://www.linkedin.com/in/caudrillier/?originalSubdomain=fr">Consulter mon Linkedin</a></button>
 							</li>
-							<li><span>GitHub</span><button class="btn-link"><a href="">Visiter mon GitHub</a></button></li>
+							<li><span>GitHub</span><button class="btn-link"><a href="https://github.com/HorusTheCat">Visiter mon GitHub</a></button></li>
 						</ul>
 					</div>
 				</div>
