--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
 			</div>
 			<div class="card">
 				<div class="profil">
-					<img src="/photos/blank-profile-picture.png" alt="" />
+					<img src="/photos/Photo_Ifodenet.png" alt="" />
 					<div class="description">
 						<div class="para">
-							<p>Ceci est un paragraphe de description</p>
+							<p>Ifodenet FRANCOIS</p>
 						</div>
 						<ul>
 							<li>
-								<span>Linkedin</span><button class="btn-link"><a href="">Consulter mon Linkedin</a></button>
+								<span>Linkedin</span><button class="btn-link"><a href="https://www.linkedin.com/in/fran%C3%A7ois-ifodenet-statisticien/">Consulter mon Linkedin</a></button>
 							</li>
 							<li><span>GitHub</span><button class="btn-link"><a href="">Visiter mon GitHub</a></button></li>
 						</ul>
