Mise à jours Ifodenet

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<li>
 								<span>Linkedin</span><button class="btn-link"><a href="https://www.linkedin.com/in/fran%C3%A7ois-ifodenet-statisticien/">Consulter mon Linkedin</a></button>
 							</li>
-							<li><span>GitHub</span><button class="btn-link"><a href="">Visiter mon GitHub</a></button></li>
+							<li><span>GitHub</span><button class="btn-link"><a href="https://github.com/Ifran9/ifodenet">Visiter mon GitHub</a></button></li>
 						</ul>
 					</div>
 				</div>
