Mise à jours Ifodenet

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			</div>
 			<div class="card">
 				<div class="profil">
-					<img src="/photos/Photo_Ifodenet.png" alt="" />
+					<img src="/photos/Photo_Ifodenet.jpg" alt="" />
 					<div class="description">
 						<div class="para">
 							<p>Ifodenet FRANCOIS</p>
