--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
 					</div>
 				</div>
 			</div>
-			<div class="card">
+			<<div class="card">
 				<div class="profil">
-					<img src="/photos/blank-profile-picture.png" alt="" />
-					<div class="description">
+					<img src="/photos/nico.jpg" alt="" />
+					<div class="Stagiaire consultant Transformation Numerique">
 						<div class="para">
-							<p>Ceci est un paragraphe de description</p>
+							<p>NGNITEDEM Nico</p>
 						</div>
 						<ul>
 							<li>
-								<span>Linkedin</span><button class="btn-link"><a href="">Consulter mon Linkedin</a></button>
+								<span>Linkedin</span><button class="btn-link"><a href="www.linkedin.com/in/nico-ngnitedem-10898a121">Consulter mon Linkedin</a></button>
 							</li>
-							<li><span>GitHub</span><button class="btn-link"><a href="">Visiter mon GitHub</a></button></li>
+							<li><span>GitHub</span><button class="btn-link"><a href="https://github.com/NicoLudovick">Visiter mon GitHub</a></button></li>
 						</ul>
 					</div>
 				</div>
