mise ajour Anaik

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
 					<img src="/photos/blank-profile-picture.png" alt="" />
 					<div class="description">
 						<div class="para">
-							<p>Ceci est un paragraphe de description</p>
+							<p>Anaïk Samuel DADEOU</p>
 						</div>
 						<ul>
 							<li>
-								<span>Linkedin</span><button class="btn-link"><a href="">Consulter mon Linkedin</a></button>
+								<span>Linkedin</span><button class="btn-link"><a href="www.linkedin.com/in/v-anaïk-samuel-dadeou-35b643275">Consulter mon Linkedin</a></button>
 							</li>
-							<li><span>GitHub</span><button class="btn-link"><a href="">Visiter mon GitHub</a></button></li>
+							<li><span>GitHub</span><button class="btn-link"><a href="https://github.com/Anaik1998">Visiter mon GitHub</a></button></li>
 						</ul>
 					</div>
 				</div>
