Mise a Jour Anaïk

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			</div>
 			<div class="card">
 				<div class="profil">
-					<img src="/photos/blank-profile-picture.png" alt="" />
+					<img src="/photos/Anaik.JPG" alt="" />
 					<div class="description">
 						<div class="para">
 							<p>Anaïk Samuel DADEOU</p>
