--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						</div>
 						<ul>
 							<li>
-								<span>Linkedin</span><button class="btn-link"><a href="www.linkedin.com/in/v-anaïk-samuel-dadeou-35b643275">Consulter mon Linkedin</a></button>
+								<span>Linkedin</span><button class="btn-link"><a href="https://www.linkedin.com/in/v-anaïk-samuel-dadeou-35b643275">Consulter mon Linkedin</a></button>
 							</li>
 							<li><span>GitHub</span><button class="btn-link"><a href="https://github.com/Anaik1998">Visiter mon GitHub</a></button></li>
 						</ul>
