animation added and resizing img & minify codes

--- a/index.html
+++ b/index.html
@@ -1,129 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="styles.css">
-	<title>Trombinoscope EPSI</title>
-</head>
-
-<body>
-	<div class="container">
-		<div class="title">
-			<h1>Trombinoscope</h1>
-		</div>
-		<div class="underline"></div>
-		<div class="sub-title">
-			<h3>POEC Consultant en transformation numérique</h2>
-				<h4>2024</h4>
-		</div>
-		<div class="cards">
-			<div class="card">
-				<div class="profil">
-					<img src="/photos/tarik_b.png" alt="Photo de tarik" />
-					<div class="description">
-						<div class="para">
-							<p>Tarik BABA-KHOUYA</p>
-						</div>
-						<ul>
-							<li>
-								<span>Linkedin</span><button class="btn-link"><a
-										href="https://www.linkedin.com/in/tarik-babakhouya/">Consulter mon Linkedin</a></button>
-							</li>
-							<li><span>GitHub</span><button class="btn-link"><a href="https://github.com/Tarik-B-dev">Visiter
-										mon GitHub</a></button></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="card">
-				<div class="profil">
-					<img src="/photos/mel.jpg" alt="photo de Mel" />
-					<div class="description">
-						<div class="para">
-							<p>Caudrillier Mélanie</p>
-						</div>
-						<ul>
-							<li>
-								<span>Linkedin</span><button class="btn-link"><a href="https://www.linkedin.com/in/caudrillier/?originalSubdomain=fr">Consulter mon Linkedin</a></button>
-							</li>
-							<li><span>GitHub</span><button class="btn-link"><a href="https://github.com/HorusTheCat">Visiter mon GitHub</a></button></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="card">
-				<div class="profil">
-					<img src="/photos/Catherine.png" alt="" />
-					<div class="description">
-						<div class="para">
-							<p>Catherine Sanca</p>
-						</div>
-						<ul>
-							<li>
-								<span>Linkedin</span><button class="btn-link"><a href="https://www.linkedin.com/in/bealle-catherine/">Consulter mon Linkedin</a></button>
-							</li>
-							<li><span>GitHub</span><button class="btn-link"><a href="https://github.com/Cath1bsr">Visiter mon GitHub</a></button></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="card">
-				<div class="profil">
-					<img src="/photos/Photo_Ifodenet.jpg" alt="" />
-					<div class="description">
-						<div class="para">
-							<p>Ifodenet FRANCOIS</p>
-						</div>
-						<ul>
-							<li>
-								<span>Linkedin</span><button class="btn-link"><a href="https://www.linkedin.com/in/fran%C3%A7ois-ifodenet-statisticien/">Consulter mon Linkedin</a></button>
-							</li>
-							<li><span>GitHub</span><button class="btn-link"><a href="https://github.com/Ifran9/ifodenet">Visiter mon GitHub</a></button></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<<div class="card">
-				<div class="profil">
-					<img src="/photos/nico.jpg" alt="" />
-					<div class="Stagiaire consultant Transformation Numerique">
-						<div class="para">
-							<p>NGNITEDEM Nico</p>
-						</div>
-						<ul>
-							<li>
-								<span>Linkedin</span><button class="btn-link"><a href="https://linkedin.com/in/nico-ngnitedem-1992">Consulter mon Linkedin</a></button>
-							</li>
-							<li><span>GitHub</span><button class="btn-link"><a href="https://github.com/NicoLudovick">Visiter mon GitHub</a></button></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="card">
-				<div class="profil">
-					<img src="/photos/Anaik.JPG" alt="" />
-					<div class="description">
-						<div class="para">
-							<p>Anaïk Samuel DADEOU</p>
-						</div>
-						<ul>
-							<li>
-								<span>Linkedin</span><button class="btn-link"><a href="https://www.linkedin.com/in/v-anaïk-samuel-dadeou-35b643275">Consulter mon Linkedin</a></button>
-							</li>
-							<li><span>GitHub</span><button class="btn-link"><a href="https://github.com/Anaik1998">Visiter mon GitHub</a></button></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	</hr>
-	<footer>
-		<p>Trombi v.1</p>
-		<p>Tous droits réservés © 2024</p>
-	</footer>
-</body>
-
-</html>
+<!doctypehtml><html lang=fr><meta charset=UTF-8><meta content="width=device-width,initial-scale=1"name=viewport><link href=styles.css rel=stylesheet><title>Trombinoscope EPSI</title><div class=container><div class=title><h1>Trombinoscope</h1></div><div class=underline></div><div class=sub-title><h3>POEC Consultant en transformation numérique<h4>2024</h4></div><div class=cards><div class=card><div class=profil><div class=container-img><img alt="Photo de tarik"src=/photos/tarik_b.png></div><div class=description><div class=para><p>Tarik BABA-KHOUYA</div><ul><li><span>Linkedin</span><button class=btn-link><a href=https://www.linkedin.com/in/tarik-babakhouya/ >Consulter mon Linkedin</a></button><li><span>GitHub</span><button class=btn-link><a href=https://github.com/Tarik-B-dev>Visiter mon GitHub</a></button></ul></div></div></div><div class=card><div class=profil><div class=container-img><img alt="photo de Mel"src=/photos/mel.jpg></div><div class=description><div class=para><p>Mélanie CAUDRILLIER</div><ul><li><span>Linkedin</span><button class=btn-link><a href="https://www.linkedin.com/in/caudrillier/?originalSubdomain=fr">Consulter mon Linkedin</a></button><li><span>GitHub</span><button class=btn-link><a href=https://github.com/HorusTheCat>Visiter mon GitHub</a></button></ul></div></div></div><div class=card><div class=profil><div class=container-img><img alt=""src=/photos/Catherine.png></div><div class=description><div class=para><p>Catherine SANCA</div><ul><li><span>Linkedin</span><button class=btn-link><a href=https://www.linkedin.com/in/bealle-catherine/ >Consulter mon Linkedin</a></button><li><span>GitHub</span><button class=btn-link><a href=https://github.com/Cath1bsr>Visiter mon GitHub</a></button></ul></div></div></div><div class=card><div class=profil><div class=container-img><img alt=""src=/photos/Photo_Ifodenet.jpg></div><div class=description><div class=para><p>Ifodenet FRANCOIS</div><ul><li><span>Linkedin</span><button class=btn-link><a href=https://www.linkedin.com/in/fran%C3%A7ois-ifodenet-statisticien/ >Consulter mon Linkedin</a></button><li><span>GitHub</span><button class=btn-link><a href=https://github.com/Ifran9>Visiter mon GitHub</a></button></ul></div></div></div><div class=card><div class=profil><div class=container-img><img alt=""src=/photos/nico.jpg></div><div class="Numerique Stagiaire Transformation consultant"><div class=para><p>Nico NGNITEDEM</div><ul><li><span>Linkedin</span><button class=btn-link><a href=https://fr.linkedin.com/in/nico-ngnitedem-10898a121>Consulter mon Linkedin</a></button><li><span>GitHub</span><button class=btn-link><a href=https://github.com/NicoLudovick>Visiter mon GitHub</a></button></ul></div></div></div><div class=card><div class=profil><div class=container-img><img alt=""src=/photos/Anaik.JPG></div><div class=description><div class=para><p>Anaïk Samuel DADEOU</div><ul><li><span>Linkedin</span><button class=btn-link><a href=https://www.linkedin.com/in/v-anaïk-samuel-dadeou-35b643275>Consulter mon Linkedin</a></button><li><span>GitHub</span><button class=btn-link><a href=https://github.com/Anaik1998>Visiter mon GitHub</a></button></ul></div></div></div></div></div><footer><p>Trombi v.1<p>Tous droits réservés © 2024</footer>
