--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                      </li>
                      <li><span>GitHub</span><button class="btn-link"><a href="https://github.com/Tarik-B-dev">Visiter
                               mon GitHub</a></button></li>
-                     <li><span>E-mail</span><button class="btn-link"><a href="">contactez moi</a></button></li>
+                     <li><span>E-mail</span><button class="btn-link"><a href="mailto:tarik.babakhouya.dev@gmail.com">contactez moi</a></button></li>
                   </ul>
                </div>
             </div>
@@ -130,7 +130,7 @@
                      <li><span>GitHub</span><button class="btn-link"><a href="https://github.com/Ifran9">Visiter mon
                               GitHub</a></button></li>
 
-                     <li><span>E-mail</span><button class="btn-link"><a href="">contactez moi</a></button></li>
+                     <li><span>E-mail</span><button class="btn-link"><a href="mailto:ifodenetfrancois1@gmail.com">contactez moi</a></button></li>
                   </ul>
                </div>
             </div>
@@ -155,7 +155,7 @@
                      <li><span>GitHub</span><button class="btn-link"><a href="https://github.com/NicoLudovick">Visiter
                               mon GitHub</a></button></li>
 
-                     <li><span>E-mail</span><button class="btn-link"><a href="">contactez moi</a></button></li>
+                     <li><span>E-mail</span><button class="btn-link"><a href="mailto:nicoludovick@gmail.com">contactez moi</a></button></li>
                   </ul>
                </div>
             </div>
@@ -324,7 +324,7 @@
                      <li><span>GitHub</span><button class="btn-link"><a href="#">Visiter mon
                               GitHub</a></button></li>
 
-                     <li><span>E-mail</span><button class="btn-link"><a href="chevalier.erwan@orange.fr">contactez moi</a></button></li>
+                     <li><span>E-mail</span><button class="btn-link"><a href="mailto:chevalier.erwan@orange.fr">contactez moi</a></button></li>
                   </ul>
                </div>
             </div>
